<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
            tools:text="Esteban Ferreyra" />

        <TextView
            android:id="@+id/account_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/account_id"
            app:layout_constraintStart_toStartOf="@+id/name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/user_id"
            app:layout_constraintBottom_toBottomOf="@+id/account_id"
            app:layout_constraintEnd_toStartOf="@+id/user_id_number"
            app:layout_constraintTop_toTopOf="@+id/account_id"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/account_id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/account_id"
            app:layout_constraintStart_toEndOf="@+id/account_id"
            app:layout_constraintTop_toTopOf="@+id/account_id"
            tools:text="17661127" />

        <TextView
            android:id="@+id/user_id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_id"
            tools:text="12819565" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_badges_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_id"
            tools:itemCount="3"
            tools:listitem="@layout/badge_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Bronze_Filter_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_filter"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/Profile_Floating_Action_Button"
            app:layout_constraintEnd_toEndOf="@+id/Profile_Floating_Action_Button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Silver_Filter_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_sort_by_alpha"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/Bronze_Filter_Button"
            app:layout_constraintEnd_toEndOf="@+id/Bronze_Filter_Button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Gold_Filter_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/Silver_Filter_Button"
            app:layout_constraintEnd_toEndOf="@+id/Silver_Filter_Button">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Profile_Floating_Action_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/animation_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/try_again_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:elevation="10dp"
            android:text="@string/retry"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/lottie_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/error_search_user"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/try_again_button"
            app:layout_constraintEnd_toEndOf="@+id/try_again_button"
            app:layout_constraintStart_toStartOf="@+id/try_again_button" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="411dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation">

        </com.airbnb.lottie.LottieAnimationView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>